--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "csvtojson": "^2.0.4",
+    "ngx-papaparse": "^2.1.4",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
