--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.4.1",
     "csvtojson": "^2.0.4",
     "ngx-papaparse": "^2.1.4",
+    "ngx-spinner": "^6.0.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
